drm/amd/display: Fix NULL deref in debugfs odm_combine_segments (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12106,6 +12106,7 @@
 	patches.kernel.org/6.12.58-547-smb-client-validate-change-notify-buffer-befo.patch
 	patches.kernel.org/6.12.58-548-smb-client-fix-potential-UAF-in-smb2_close_ca.patch
 	patches.kernel.org/6.12.58-549-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
+	patches.kernel.org/6.12.58-550-drm-amd-display-Fix-NULL-deref-in-debugfs-odm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
