rtc: pcf2127: fix watchdog interrupt mask on pcf2131 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12040,6 +12040,7 @@
 	patches.kernel.org/6.12.58-481-tools-lib-thermal-don-t-preserve-owner-in-ins.patch
 	patches.kernel.org/6.12.58-482-tools-lib-thermal-use-pkg-config-to-locate-li.patch
 	patches.kernel.org/6.12.58-483-fbdev-Add-bounds-checking-in-bit_putcs-to-fix.patch
+	patches.kernel.org/6.12.58-484-rtc-pcf2127-fix-watchdog-interrupt-mask-on-pc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
