ACPI: scan: Update honor list for RPMI System MSI (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11985,6 +11985,7 @@
 	patches.kernel.org/6.12.58-426-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_de.patch
 	patches.kernel.org/6.12.58-427-ASoC-stm32-sai-manage-context-in-set_sysclk-c.patch
 	patches.kernel.org/6.12.58-428-ASoC-tlv320aic3x-Fix-class-D-initialization-f.patch
+	patches.kernel.org/6.12.58-429-ACPI-scan-Update-honor-list-for-RPMI-System-M.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
