ALSA: usb-audio: Add validation of UAC2/UAC3 effect units (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11795,6 +11795,7 @@
 	patches.kernel.org/6.12.58-236-PCI-P2PDMA-Fix-incorrect-pointer-usage-in-dev.patch
 	patches.kernel.org/6.12.58-237-bnxt_en-Add-Hyper-V-VF-ID.patch
 	patches.kernel.org/6.12.58-238-tty-serial-Modify-the-use-of-dev_err_probe.patch
+	patches.kernel.org/6.12.58-239-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-ef.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
