net: bridge: Install FDB for bridge MAC on VLAN 0 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11973,6 +11973,7 @@
 	patches.kernel.org/6.12.58-414-NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.kernel.org/6.12.58-415-NFSv4.1-fix-mount-hang-after-CREATE_SESSION-f.patch
 	patches.kernel.org/6.12.58-416-nfs4_setup_readdir-insufficient-locking-for-d.patch
+	patches.kernel.org/6.12.58-417-net-bridge-Install-FDB-for-bridge-MAC-on-VLAN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
