--- a/series.conf
+++ b/series.conf
@@ -11775,6 +11775,7 @@
 	patches.kernel.org/6.12.58-216-net-ipv6-fix-field-spanning-memcpy-warning-in.patch
 	patches.kernel.org/6.12.58-217-media-imon-make-send_packet-more-robust.patch
 	patches.kernel.org/6.12.58-218-drm-panthor-Serialize-GPU-cache-flush-operati.patch
+	patches.kernel.org/6.12.58-219-HID-pidff-Use-direction-fix-only-for-conditio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
