--- a/series.conf
+++ b/series.conf
@@ -12000,6 +12000,7 @@
 	patches.kernel.org/6.12.58-441-6pack-drop-redundant-locking-and-refcounting.patch
 	patches.kernel.org/6.12.58-442-page_pool-Clamp-pool-size-to-max-16K-pages.patch
 	patches.kernel.org/6.12.58-443-orangefs-fix-xattr-related-buffer-overflow.patch
+	patches.kernel.org/6.12.58-444-ftrace-Fix-softlockup-in-ftrace_module_enable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
