scsi: ufs: host: mediatek: Correct system PM flow (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11879,6 +11879,7 @@
 	patches.kernel.org/6.12.58-320-scsi-ufs-host-mediatek-Fix-unbalanced-IRQ-ena.patch
 	patches.kernel.org/6.12.58-321-scsi-ufs-host-mediatek-Enhance-recovery-on-hi.patch
 	patches.kernel.org/6.12.58-322-net-phy-marvell-Fix-88e1510-downshift-counter.patch
+	patches.kernel.org/6.12.58-323-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
