--- a/series.conf
+++ b/series.conf
@@ -11878,6 +11878,7 @@
 	patches.kernel.org/6.12.58-319-scsi-ufs-host-mediatek-Enhance-recovery-on-re.patch
 	patches.kernel.org/6.12.58-320-scsi-ufs-host-mediatek-Fix-unbalanced-IRQ-ena.patch
 	patches.kernel.org/6.12.58-321-scsi-ufs-host-mediatek-Enhance-recovery-on-hi.patch
+	patches.kernel.org/6.12.58-322-net-phy-marvell-Fix-88e1510-downshift-counter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
