--- a/series.conf
+++ b/series.conf
@@ -11630,6 +11630,7 @@
 	patches.kernel.org/6.12.58-071-drm-amd-Check-that-VPE-has-reached-DPM0-in-id.patch
 	patches.kernel.org/6.12.58-072-drm-amd-display-Fix-incorrect-return-of-vblan.patch
 	patches.kernel.org/6.12.58-073-ACPI-fan-Add-fan-speed-reporting-for-fans-wit.patch
+	patches.kernel.org/6.12.58-074-ACPI-fan-Use-platform-device-for-devres-relat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
