crypto: hisilicon/qm - invalidate queues in use (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11959,6 +11959,7 @@
 	patches.kernel.org/6.12.58-400-sparc-module-Add-R_SPARC_UA64-relocation-hand.patch
 	patches.kernel.org/6.12.58-401-sparc64-fix-prototypes-of-reads-bwl.patch
 	patches.kernel.org/6.12.58-402-vfio-return-ENOTTY-for-unsupported-device-fea.patch
+	patches.kernel.org/6.12.58-403-crypto-hisilicon-qm-invalidate-queues-in-use.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
