--- a/series.conf
+++ b/series.conf
@@ -11637,6 +11637,7 @@
 	patches.kernel.org/6.12.58-078-mfd-kempld-Switch-back-to-earlier-init-behavi.patch
 	patches.kernel.org/6.12.58-079-x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 	patches.kernel.org/6.12.58-080-usb-gadget-f_fs-Fix-epfile-null-pointer-acces.patch
+	patches.kernel.org/6.12.58-081-drm-sched-Optimise-drm_sched_entity_push_job.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
