media: ipu6: isys: Set embedded data type correctly for metadata formats (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11799,6 +11799,7 @@
 	patches.kernel.org/6.12.58-240-idpf-do-not-linearize-big-TSO-packets.patch
 	patches.kernel.org/6.12.58-241-rds-Fix-endianness-annotation-for-RDS_MPATH_H.patch
 	patches.kernel.org/6.12.58-242-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
+	patches.kernel.org/6.12.58-243-media-ipu6-isys-Set-embedded-data-type-correc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
