gpiolib: fix invalid pointer access in debugfs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12071,6 +12071,7 @@
 	patches.kernel.org/6.12.58-512-selftests-netdevsim-Fix-ethtool-coalesce.sh-f.patch
 	patches.kernel.org/6.12.58-513-net-vlan-sync-VLAN-features-with-lower-device.patch
 	patches.kernel.org/6.12.58-514-gpio-swnode-don-t-use-the-swnode-s-name-as-th.patch
+	patches.kernel.org/6.12.58-515-gpiolib-fix-invalid-pointer-access-in-debugfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
