x86/runtime-const: Add the RUNTIME_CONST_PTR assembly macro (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12050,6 +12050,7 @@
 	patches.kernel.org/6.12.58-491-ceph-refactor-wake_up_bit-pattern-of-calling.patch
 	patches.kernel.org/6.12.58-492-ceph-fix-multifs-mds-auth-caps-issue.patch
 	patches.kernel.org/6.12.58-493-x86-use-cmov-for-user-address-masking.patch
+	patches.kernel.org/6.12.58-494-x86-runtime-const-Add-the-RUNTIME_CONST_PTR-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
