--- a/series.conf
+++ b/series.conf
@@ -11969,6 +11969,7 @@
 	patches.kernel.org/6.12.58-410-drm-amd-display-Add-AVI-infoframe-copy-in-cop.patch
 	patches.kernel.org/6.12.58-411-drm-amd-display-Init-dispclk-from-bootup-cloc.patch
 	patches.kernel.org/6.12.58-412-drm-amd-display-Fix-for-test-crash-due-to-pow.patch
+	patches.kernel.org/6.12.58-413-drm-amd-display-change-dc-stream-color-settin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
