NFSD: Fix crash in nfsd4_read_release() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11557,6 +11557,7 @@
 	patches.kernel.org/6.12.57-040-sfc-fix-NULL-dereferences-in-ef100_process_de.patch
 	patches.kernel.org/6.12.57-041-btrfs-tree-checker-fix-bounds-check-in-check_.patch
 	patches.kernel.org/6.12.57-042-Linux-6.12.57.patch
+	patches.kernel.org/6.12.58-001-NFSD-Fix-crash-in-nfsd4_read_release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
