net: intel: fm10k: Fix parameter idx set but not used (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11953,6 +11953,7 @@
 	patches.kernel.org/6.12.58-394-iommu-vt-d-Replace-snprintf-with-scnprintf-in.patch
 	patches.kernel.org/6.12.58-395-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 	patches.kernel.org/6.12.58-396-wifi-mac80211-Track-NAN-interface-start-stop.patch
+	patches.kernel.org/6.12.58-397-net-intel-fm10k-Fix-parameter-idx-set-but-not.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
