bpftool: Fix -Wuninitialized-const-pointer warnings with clang >= 21 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11698,6 +11698,7 @@
 	patches.kernel.org/6.12.58-139-tools-cpupower-fix-error-return-value-in-cpup.patch
 	patches.kernel.org/6.12.58-140-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
 	patches.kernel.org/6.12.58-141-power-supply-qcom_battmgr-handle-charging-sta.patch
+	patches.kernel.org/6.12.58-142-bpftool-Fix-Wuninitialized-const-pointer-warn.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
