net: ipv6: fix field-spanning memcpy warning in AH output (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11772,6 +11772,7 @@
 	patches.kernel.org/6.12.58-213-scsi-ufs-host-mediatek-Assign-power-mode-user.patch
 	patches.kernel.org/6.12.58-214-scsi-ufs-host-mediatek-Change-reset-sequence-.patch
 	patches.kernel.org/6.12.58-215-scsi-ufs-host-mediatek-Fix-invalid-access-in-.patch
+	patches.kernel.org/6.12.58-216-net-ipv6-fix-field-spanning-memcpy-warning-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
