rtc: rx8025: fix incorrect register reference (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12101,6 +12101,7 @@
 	patches.kernel.org/6.12.58-542-Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_mo.patch
 	patches.kernel.org/6.12.58-543-iommufd-Don-t-overflow-during-division-for-di.patch
 	patches.kernel.org/6.12.58-544-parisc-Avoid-crash-due-to-unaligned-access-in.patch
+	patches.kernel.org/6.12.58-545-rtc-rx8025-fix-incorrect-register-reference.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
