bridge: Redirect to backup port when port is administratively down (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11766,6 +11766,7 @@
 	patches.kernel.org/6.12.58-207-tty-serial-ip22zilog-Use-platform-device-for-.patch
 	patches.kernel.org/6.12.58-208-powerpc-eeh-Use-result-of-error_detected-in-u.patch
 	patches.kernel.org/6.12.58-209-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
+	patches.kernel.org/6.12.58-210-bridge-Redirect-to-backup-port-when-port-is-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
