--- a/series.conf
+++ b/series.conf
@@ -11897,6 +11897,7 @@
 	patches.kernel.org/6.12.58-338-netfilter-nf_reject-don-t-reply-to-icmp-error.patch
 	patches.kernel.org/6.12.58-339-x86-kvm-Prefer-native-qspinlock-for-dedicated.patch
 	patches.kernel.org/6.12.58-340-selftests-Disable-dad-for-ipv6-in-fcnal-test..patch
+	patches.kernel.org/6.12.58-341-eth-8139too-Make-8139TOO_PIO-depend-on-NO_IOP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
