drm/sysfb: Do not dereference NULL pointer in plane reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11622,6 +11622,7 @@
 	patches.kernel.org/6.12.58-063-regmap-slimbus-fix-bus_context-pointer-in-reg.patch
 	patches.kernel.org/6.12.58-064-s390-mm-Fix-memory-leak-in-add_marker-when-kv.patch
 	patches.kernel.org/6.12.58-065-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
+	patches.kernel.org/6.12.58-066-drm-sysfb-Do-not-dereference-NULL-pointer-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
