--- a/series.conf
+++ b/series.conf
@@ -12061,6 +12061,7 @@
 	patches.kernel.org/6.12.58-502-ring-buffer-Do-not-warn-in-ring_buffer_map_ge.patch
 	patches.kernel.org/6.12.58-503-net-libwx-fix-device-bus-LAN-ID.patch
 	patches.kernel.org/6.12.58-504-riscv-stacktrace-Disable-KASAN-checks-for-non.patch
+	patches.kernel.org/6.12.58-505-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
