--- a/series.conf
+++ b/series.conf
@@ -11565,6 +11565,7 @@
 	patches.kernel.org/6.12.58-006-ACPI-button-Call-input_free_device-on-failing.patch
 	patches.kernel.org/6.12.58-007-virtio-net-drop-the-multi-buffer-XDP-packet-i.patch
 	patches.kernel.org/6.12.58-008-fbdev-bitblit-bound-check-glyph-index-in-bit_.patch
+	patches.kernel.org/6.12.58-009-Bluetooth-rfcomm-fix-modem-control-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
