RDMA/irdma: Update Kconfig (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11941,6 +11941,7 @@
 	patches.kernel.org/6.12.58-382-wifi-rtw89-renew-a-completion-for-each-H2C-co.patch
 	patches.kernel.org/6.12.58-383-usb-xhci-pci-add-support-for-hosts-with-zero-.patch
 	patches.kernel.org/6.12.58-384-ipv6-np-rxpmtu-race-annotation.patch
+	patches.kernel.org/6.12.58-385-RDMA-irdma-Update-Kconfig.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
