--- a/series.conf
+++ b/series.conf
@@ -12062,6 +12062,7 @@
 	patches.kernel.org/6.12.58-503-net-libwx-fix-device-bus-LAN-ID.patch
 	patches.kernel.org/6.12.58-504-riscv-stacktrace-Disable-KASAN-checks-for-non.patch
 	patches.kernel.org/6.12.58-505-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts.patch
+	patches.kernel.org/6.12.58-506-Bluetooth-hci_event-validate-skb-length-for-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
