--- a/series.conf
+++ b/series.conf
@@ -11863,6 +11863,7 @@
 	patches.kernel.org/6.12.58-304-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 	patches.kernel.org/6.12.58-305-drm-amdgpu-add-support-for-cyan-skillfish-gpu.patch
 	patches.kernel.org/6.12.58-306-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
+	patches.kernel.org/6.12.58-307-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
