PCI: endpoint: pci-epf-test: Limit PCIe BAR size for fixed BARs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11869,6 +11869,7 @@
 	patches.kernel.org/6.12.58-310-tty-vt-Add-missing-return-value-for-VT_RESIZE.patch
 	patches.kernel.org/6.12.58-311-drm-msm-make-sure-to-not-queue-up-recovery-mo.patch
 	patches.kernel.org/6.12.58-312-char-Use-list_del_init-in-misc_deregister-to-.patch
+	patches.kernel.org/6.12.58-313-PCI-endpoint-pci-epf-test-Limit-PCIe-BAR-size.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
