--- a/series.conf
+++ b/series.conf
@@ -11704,6 +11704,7 @@
 	patches.kernel.org/6.12.58-145-selftests-bpf-Fix-selftest-verifier_arena_lar.patch
 	patches.kernel.org/6.12.58-146-spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
 	patches.kernel.org/6.12.58-147-ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
+	patches.kernel.org/6.12.58-148-clocksource-drivers-vf-pit-Replace-raw_readl-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
