--- a/series.conf
+++ b/series.conf
@@ -11798,6 +11798,7 @@
 	patches.kernel.org/6.12.58-239-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-ef.patch
 	patches.kernel.org/6.12.58-240-idpf-do-not-linearize-big-TSO-packets.patch
 	patches.kernel.org/6.12.58-241-rds-Fix-endianness-annotation-for-RDS_MPATH_H.patch
+	patches.kernel.org/6.12.58-242-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
