drm/amdgpu: Respect max pixel clock for HDMI and DVI-D (v2) (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11821,6 +11821,7 @@
 	patches.kernel.org/6.12.58-262-drm-amd-display-Increase-minimum-clock-for-TM.patch
 	patches.kernel.org/6.12.58-263-drm-amd-display-incorrect-conditions-for-fail.patch
 	patches.kernel.org/6.12.58-264-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-t.patch
+	patches.kernel.org/6.12.58-265-drm-amdgpu-Respect-max-pixel-clock-for-HDMI-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
