--- a/series.conf
+++ b/series.conf
@@ -11662,6 +11662,7 @@
 	patches.kernel.org/6.12.58-103-selftests-bpf-Fix-bpf_prog_detach2-usage-in-t.patch
 	patches.kernel.org/6.12.58-104-cpufreq-longhaul-handle-NULL-policy-in-longha.patch
 	patches.kernel.org/6.12.58-105-arc-Fix-__fls-const-foldability-via-__builtin.patch
+	patches.kernel.org/6.12.58-106-selftests-bpf-Upon-failures-exit-with-code-1-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
