scsi: mpi3mr: Fix I/O failures during controller reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11802,6 +11802,7 @@
 	patches.kernel.org/6.12.58-243-media-ipu6-isys-Set-embedded-data-type-correc.patch
 	patches.kernel.org/6.12.58-244-rpmsg-char-Export-alias-for-RPMSG-ID-rpmsg-ra.patch
 	patches.kernel.org/6.12.58-245-net-ipv4-allow-directed-broadcast-routes-to-u.patch
+	patches.kernel.org/6.12.58-246-scsi-mpi3mr-Fix-I-O-failures-during-controlle.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
