--- a/series.conf
+++ b/series.conf
@@ -11803,6 +11803,7 @@
 	patches.kernel.org/6.12.58-244-rpmsg-char-Export-alias-for-RPMSG-ID-rpmsg-ra.patch
 	patches.kernel.org/6.12.58-245-net-ipv4-allow-directed-broadcast-routes-to-u.patch
 	patches.kernel.org/6.12.58-246-scsi-mpi3mr-Fix-I-O-failures-during-controlle.patch
+	patches.kernel.org/6.12.58-247-scsi-mpi3mr-Fix-controller-init-failure-on-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
