--- a/series.conf
+++ b/series.conf
@@ -12014,6 +12014,7 @@
 	patches.kernel.org/6.12.58-455-RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.kernel.org/6.12.58-456-RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 	patches.kernel.org/6.12.58-457-RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-aro.patch
+	patches.kernel.org/6.12.58-458-btrfs-fix-memory-leak-of-qgroup_list-in-btrfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
