--- a/series.conf
+++ b/series.conf
@@ -11758,6 +11758,7 @@
 	patches.kernel.org/6.12.58-199-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MO.patch
 	patches.kernel.org/6.12.58-200-drm-tidss-Set-crtc-modesetting-parameters-wit.patch
 	patches.kernel.org/6.12.58-201-media-i2c-Kconfig-Ensure-a-dependency-on-HAVE.patch
+	patches.kernel.org/6.12.58-202-PCI-ERR-Update-device-error_state-already-aft.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
