iio: adc: spear_adc: mask SPEAR_ADC_STATUS channel and avg sample before setting register (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11780,6 +11780,7 @@
 	patches.kernel.org/6.12.58-221-drm-bridge-display-connector-don-t-set-OP_DET.patch
 	patches.kernel.org/6.12.58-222-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 	patches.kernel.org/6.12.58-223-drm-amdkfd-Handle-lack-of-READ-permissions-in.patch
+	patches.kernel.org/6.12.58-224-iio-adc-spear_adc-mask-SPEAR_ADC_STATUS-chann.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
