--- a/series.conf
+++ b/series.conf
@@ -11679,6 +11679,7 @@
 	patches.kernel.org/6.12.58-120-hwmon-sy7636a-add-alias.patch
 	patches.kernel.org/6.12.58-121-irqchip-loongson-pch-lpc-Use-legacy-domain-fo.patch
 	patches.kernel.org/6.12.58-122-cpufreq-ondemand-Update-the-efficient-idle-ch.patch
+	patches.kernel.org/6.12.58-123-arm64-zynqmp-Disable-coresight-by-default.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
