media: adv7180: Add missing lock in suspend callback (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11846,6 +11846,7 @@
 	patches.kernel.org/6.12.58-287-drm-panthor-check-bo-offset-alignment-in-vm-b.patch
 	patches.kernel.org/6.12.58-288-drm-panel-backlight-quirks-Make-EDID-match-op.patch
 	patches.kernel.org/6.12.58-289-net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000.patch
+	patches.kernel.org/6.12.58-290-media-adv7180-Add-missing-lock-in-suspend-cal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
