--- a/series.conf
+++ b/series.conf
@@ -11576,6 +11576,7 @@
 	patches.kernel.org/6.12.58-017-smb-client-fix-potential-cfid-UAF-in-smb2_que.patch
 	patches.kernel.org/6.12.58-018-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
 	patches.kernel.org/6.12.58-019-wifi-ath10k-Fix-memory-leak-on-unsupported-WM.patch
+	patches.kernel.org/6.12.58-020-wifi-ath11k-Add-missing-platform-IDs-for-quir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
