video: backlight: lp855x_bl: Set correct EPROM start for LP8556 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11694,6 +11694,7 @@
 	patches.kernel.org/6.12.58-135-nvme-fc-use-lock-accessing-port_state-and-rpo.patch
 	patches.kernel.org/6.12.58-136-bpf-Do-not-limit-bpf_cgroup_from_id-to-curren.patch
 	patches.kernel.org/6.12.58-137-i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wi.patch
+	patches.kernel.org/6.12.58-138-video-backlight-lp855x_bl-Set-correct-EPROM-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
