bpf: Clear pfmemalloc flag when freeing all fragments (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11709,6 +11709,7 @@
 	patches.kernel.org/6.12.58-150-clocksource-drivers-timer-rtl-otto-Do-not-int.patch
 	patches.kernel.org/6.12.58-151-blk-cgroup-fix-possible-deadlock-while-config.patch
 	patches.kernel.org/6.12.58-152-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
+	patches.kernel.org/6.12.58-153-bpf-Clear-pfmemalloc-flag-when-freeing-all-fr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
