--- a/series.conf
+++ b/series.conf
@@ -11806,6 +11806,7 @@
 	patches.kernel.org/6.12.58-247-scsi-mpi3mr-Fix-controller-init-failure-on-fa.patch
 	patches.kernel.org/6.12.58-248-scsi-pm80xx-Fix-race-condition-caused-by-stat.patch
 	patches.kernel.org/6.12.58-249-extcon-adc-jack-Fix-wakeup-source-leaks-on-de.patch
+	patches.kernel.org/6.12.58-250-remoteproc-wkup_m3-Use-devm_pm_runtime_enable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
