virtio-net: drop the multi-buffer XDP packet in zerocopy (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11563,6 +11563,7 @@
 	patches.kernel.org/6.12.58-004-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.kernel.org/6.12.58-005-ACPI-video-Fix-use-after-free-in-acpi_video_s.patch
 	patches.kernel.org/6.12.58-006-ACPI-button-Call-input_free_device-on-failing.patch
+	patches.kernel.org/6.12.58-007-virtio-net-drop-the-multi-buffer-XDP-packet-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
