--- a/series.conf
+++ b/series.conf
@@ -12111,6 +12111,7 @@
 	patches.kernel.org/6.12.58-552-lib-crypto-curve25519-hacl64-Fix-older-clang-.patch
 	patches.kernel.org/6.12.58-553-scsi-ufs-ufs-pci-Fix-S0ix-S3-for-Intel-contro.patch
 	patches.kernel.org/6.12.58-554-scsi-ufs-ufs-pci-Set-UFSHCD_QUIRK_PERFORM_LIN.patch
+	patches.kernel.org/6.12.58-555-scsi-ufs-core-Add-a-quirk-to-suppress-link_st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
