power: supply: sbs-charger: Support multiple devices (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11675,6 +11675,7 @@
 	patches.kernel.org/6.12.58-116-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 	patches.kernel.org/6.12.58-117-hwmon-sbtsi_temp-AMD-CPU-extended-temperature.patch
 	patches.kernel.org/6.12.58-118-pinctrl-keembay-release-allocated-memory-in-d.patch
+	patches.kernel.org/6.12.58-119-power-supply-sbs-charger-Support-multiple-dev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
