--- a/series.conf
+++ b/series.conf
@@ -11819,6 +11819,7 @@
 	patches.kernel.org/6.12.58-260-media-pci-mgb4-Fix-timings-comparison-in-VIDI.patch
 	patches.kernel.org/6.12.58-261-ASoC-SOF-ipc4-pcm-Add-fixup-for-channels.patch
 	patches.kernel.org/6.12.58-262-drm-amd-display-Increase-minimum-clock-for-TM.patch
+	patches.kernel.org/6.12.58-263-drm-amd-display-incorrect-conditions-for-fail.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
