ethernet: Extend device_get_mac_address() to use NVMEM (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11921,6 +11921,7 @@
 	patches.kernel.org/6.12.58-362-drm-amd-display-Disable-VRR-on-DCE-6.patch
 	patches.kernel.org/6.12.58-363-drm-amd-display-dml2-Guard-dml21_map_dc_state.patch
 	patches.kernel.org/6.12.58-364-page_pool-always-add-GFP_NOWARN-for-ATOMIC-al.patch
+	patches.kernel.org/6.12.58-365-ethernet-Extend-device_get_mac_address-to-use.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
