net: usb: qmi_wwan: initialize MAC header offset in qmimux_rx_fixup (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12081,6 +12081,7 @@
 	patches.kernel.org/6.12.58-522-sctp-Hold-sock-lock-while-iterating-over-addr.patch
 	patches.kernel.org/6.12.58-523-net-ionic-add-dma_wmb-before-ringing-TX-doorb.patch
 	patches.kernel.org/6.12.58-524-net-ionic-map-SKB-after-pseudo-header-checksu.patch
+	patches.kernel.org/6.12.58-525-net-usb-qmi_wwan-initialize-MAC-header-offset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
