--- a/series.conf
+++ b/series.conf
@@ -11677,6 +11677,7 @@
 	patches.kernel.org/6.12.58-118-pinctrl-keembay-release-allocated-memory-in-d.patch
 	patches.kernel.org/6.12.58-119-power-supply-sbs-charger-Support-multiple-dev.patch
 	patches.kernel.org/6.12.58-120-hwmon-sy7636a-add-alias.patch
+	patches.kernel.org/6.12.58-121-irqchip-loongson-pch-lpc-Use-legacy-domain-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
