--- a/series.conf
+++ b/series.conf
@@ -12118,6 +12118,7 @@
 	patches.kernel.org/6.12.58-559-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0.patch
 	patches.kernel.org/6.12.58-560-drm-amdgpu-Fix-function-header-names-in-amdgp.patch
 	patches.kernel.org/6.12.58-561-drm-amd-display-Fix-black-screen-with-HDMI-ou.patch
+	patches.kernel.org/6.12.58-562-Linux-6.12.58.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
