drm/amdkfd: return -ENOTTY for unsupported IOCTLs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11750,6 +11750,7 @@
 	patches.kernel.org/6.12.58-191-selftests-net-Ensure-assert-triggers-in-psock.patch
 	patches.kernel.org/6.12.58-192-wifi-rtw89-print-just-once-for-unknown-C2H-ev.patch
 	patches.kernel.org/6.12.58-193-wifi-rtw88-sdio-use-indirect-IO-for-device-re.patch
+	patches.kernel.org/6.12.58-194-drm-amdkfd-return-ENOTTY-for-unsupported-IOCT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
