--- a/series.conf
+++ b/series.conf
@@ -11701,6 +11701,7 @@
 	patches.kernel.org/6.12.58-142-bpftool-Fix-Wuninitialized-const-pointer-warn.patch
 	patches.kernel.org/6.12.58-143-cpuidle-Fail-cpuidle-device-registration-if-t.patch
 	patches.kernel.org/6.12.58-144-futex-Don-t-leak-robust_list-pointer-on-exec-.patch
+	patches.kernel.org/6.12.58-145-selftests-bpf-Fix-selftest-verifier_arena_lar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
