drm/bridge: cdns-dsi: Don't fail on MIPI_DSI_MODE_VIDEO_BURST (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11755,6 +11755,7 @@
 	patches.kernel.org/6.12.58-196-media-amphion-Delete-v4l2_fh-synchronously-in.patch
 	patches.kernel.org/6.12.58-197-drm-tidss-Use-the-crtc_-timings-when-programm.patch
 	patches.kernel.org/6.12.58-198-drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
+	patches.kernel.org/6.12.58-199-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
