--- a/series.conf
+++ b/series.conf
@@ -12090,6 +12090,7 @@
 	patches.kernel.org/6.12.58-531-net-mlx5e-Fix-return-value-in-case-of-module-.patch
 	patches.kernel.org/6.12.58-532-net-ti-icssg-prueth-Fix-fdb-hash-size-configu.patch
 	patches.kernel.org/6.12.58-533-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-p.patch
+	patches.kernel.org/6.12.58-534-net-wan-framer-pef2256-Switch-to-devm_mfd_add.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
