accel/habanalabs: support mapping cb with vmalloc-backed coherent memory (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11979,6 +11979,7 @@
 	patches.kernel.org/6.12.58-420-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-li.patch
 	patches.kernel.org/6.12.58-421-accel-habanalabs-return-ENOMEM-if-less-than-r.patch
 	patches.kernel.org/6.12.58-422-accel-habanalabs-gaudi2-read-preboot-status-a.patch
+	patches.kernel.org/6.12.58-423-accel-habanalabs-support-mapping-cb-with-vmal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
