--- a/series.conf
+++ b/series.conf
@@ -12022,6 +12022,7 @@
 	patches.kernel.org/6.12.58-463-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
 	patches.kernel.org/6.12.58-464-rtc-pcf2127-clear-minute-second-interrupt.patch
 	patches.kernel.org/6.12.58-465-ARM-at91-pm-save-and-restore-ACR-during-PLL-d.patch
+	patches.kernel.org/6.12.58-466-clk-at91-sam9x7-Add-peripheral-clock-id-for-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
