char: Use list_del_init() in misc_deregister() to reinitialize list pointer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11868,6 +11868,7 @@
 	patches.kernel.org/6.12.58-309-usb-cdns3-gadget-Use-after-free-during-failed.patch
 	patches.kernel.org/6.12.58-310-tty-vt-Add-missing-return-value-for-VT_RESIZE.patch
 	patches.kernel.org/6.12.58-311-drm-msm-make-sure-to-not-queue-up-recovery-mo.patch
+	patches.kernel.org/6.12.58-312-char-Use-list_del_init-in-misc_deregister-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
