ACPI: video: Fix use-after-free in acpi_video_switch_brightness() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11561,6 +11561,7 @@
 	patches.kernel.org/6.12.58-002-net-usb-asix_devices-Check-return-value-of-us.patch
 	patches.kernel.org/6.12.58-003-fbcon-Set-fb_display-i-mode-to-NULL-when-the-.patch
 	patches.kernel.org/6.12.58-004-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
+	patches.kernel.org/6.12.58-005-ACPI-video-Fix-use-after-free-in-acpi_video_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
