--- a/series.conf
+++ b/series.conf
@@ -11711,6 +11711,7 @@
 	patches.kernel.org/6.12.58-152-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
 	patches.kernel.org/6.12.58-153-bpf-Clear-pfmemalloc-flag-when-freeing-all-fr.patch
 	patches.kernel.org/6.12.58-154-nvme-Use-non-zero-KATO-for-persistent-discove.patch
+	patches.kernel.org/6.12.58-155-uprobe-Do-not-emulate-sstep-original-instruct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
