--- a/series.conf
+++ b/series.conf
@@ -12046,6 +12046,7 @@
 	patches.kernel.org/6.12.58-487-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-pola.patch
 	patches.kernel.org/6.12.58-488-drm-amdkfd-Fix-mmap-write-lock-not-release.patch
 	patches.kernel.org/6.12.58-489-ceph-add-checking-of-wait_for_completion_kill.patch
+	patches.kernel.org/6.12.58-490-ceph-fix-potential-race-condition-in-ceph_ioc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
