--- a/series.conf
+++ b/series.conf
@@ -11864,6 +11864,7 @@
 	patches.kernel.org/6.12.58-305-drm-amdgpu-add-support-for-cyan-skillfish-gpu.patch
 	patches.kernel.org/6.12.58-306-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 	patches.kernel.org/6.12.58-307-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
+	patches.kernel.org/6.12.58-308-usb-gadget-f_hid-Fix-zero-length-packet-trans.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
