--- a/series.conf
+++ b/series.conf
@@ -11952,6 +11952,7 @@
 	patches.kernel.org/6.12.58-393-bus-mhi-core-Improve-mhi_sync_power_up-handli.patch
 	patches.kernel.org/6.12.58-394-iommu-vt-d-Replace-snprintf-with-scnprintf-in.patch
 	patches.kernel.org/6.12.58-395-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
+	patches.kernel.org/6.12.58-396-wifi-mac80211-Track-NAN-interface-start-stop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
