--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.kernel.org/6.12.58-518-net-dsa-b53-fix-enabling-ip-multicast.patch
 	patches.kernel.org/6.12.58-519-net-dsa-b53-stop-reading-ARL-entries-if-searc.patch
 	patches.kernel.org/6.12.58-520-sctp-Hold-RCU-read-lock-while-iterating-over-.patch
+	patches.kernel.org/6.12.58-521-sctp-Prevent-TOCTOU-out-of-bounds-write.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
