scsi: ufs: host: mediatek: Enhance recovery on hibernation exit failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11877,6 +11877,7 @@
 	patches.kernel.org/6.12.58-318-selftests-mptcp-join-allow-more-time-to-send-.patch
 	patches.kernel.org/6.12.58-319-scsi-ufs-host-mediatek-Enhance-recovery-on-re.patch
 	patches.kernel.org/6.12.58-320-scsi-ufs-host-mediatek-Fix-unbalanced-IRQ-ena.patch
+	patches.kernel.org/6.12.58-321-scsi-ufs-host-mediatek-Enhance-recovery-on-hi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
