--- a/series.conf
+++ b/series.conf
@@ -11836,6 +11836,7 @@
 	patches.kernel.org/6.12.58-277-ptp-Limit-time-setting-of-PTP-clocks.patch
 	patches.kernel.org/6.12.58-278-dmaengine-sh-setup_xref-error-handling.patch
 	patches.kernel.org/6.12.58-279-dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
+	patches.kernel.org/6.12.58-280-dmaengine-dw-edma-Set-status-for-callback_res.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
