drm/bridge: display-connector: don't set OP_DETECT for DisplayPorts (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11777,6 +11777,7 @@
 	patches.kernel.org/6.12.58-218-drm-panthor-Serialize-GPU-cache-flush-operati.patch
 	patches.kernel.org/6.12.58-219-HID-pidff-Use-direction-fix-only-for-conditio.patch
 	patches.kernel.org/6.12.58-220-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetect.patch
+	patches.kernel.org/6.12.58-221-drm-bridge-display-connector-don-t-set-OP_DET.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
