--- a/series.conf
+++ b/series.conf
@@ -12076,6 +12076,7 @@
 	patches.kernel.org/6.12.58-517-net-dsa-b53-fix-bcm63xx-RGMII-port-link-adjus.patch
 	patches.kernel.org/6.12.58-518-net-dsa-b53-fix-enabling-ip-multicast.patch
 	patches.kernel.org/6.12.58-519-net-dsa-b53-stop-reading-ARL-entries-if-searc.patch
+	patches.kernel.org/6.12.58-520-sctp-Hold-RCU-read-lock-while-iterating-over-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
