--- a/series.conf
+++ b/series.conf
@@ -11794,6 +11794,7 @@
 	patches.kernel.org/6.12.58-235-f2fs-fix-to-detect-potential-corrupted-nid-in.patch
 	patches.kernel.org/6.12.58-236-PCI-P2PDMA-Fix-incorrect-pointer-usage-in-dev.patch
 	patches.kernel.org/6.12.58-237-bnxt_en-Add-Hyper-V-VF-ID.patch
+	patches.kernel.org/6.12.58-238-tty-serial-Modify-the-use-of-dev_err_probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
