ALSA: usb-audio: add mono main switch to Presonus S1824c (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11993,6 +11993,7 @@
 	patches.kernel.org/6.12.58-434-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 	patches.kernel.org/6.12.58-435-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for.patch
 	patches.kernel.org/6.12.58-436-Bluetooth-bcsp-receive-data-only-if-registere.patch
+	patches.kernel.org/6.12.58-437-ALSA-usb-audio-add-mono-main-switch-to-Preson.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
