wifi: mac80211: Fix 6 GHz Band capabilities element advertisement in lower bands (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11850,6 +11850,7 @@
 	patches.kernel.org/6.12.58-291-media-adv7180-Do-not-write-format-to-device-i.patch
 	patches.kernel.org/6.12.58-292-media-adv7180-Only-validate-format-in-queryst.patch
 	patches.kernel.org/6.12.58-293-media-verisilicon-Explicitly-disable-selectio.patch
+	patches.kernel.org/6.12.58-294-wifi-mac80211-Fix-6-GHz-Band-capabilities-ele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
