drm/panthor: Serialize GPU cache flush operations (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11774,6 +11774,7 @@
 	patches.kernel.org/6.12.58-215-scsi-ufs-host-mediatek-Fix-invalid-access-in-.patch
 	patches.kernel.org/6.12.58-216-net-ipv6-fix-field-spanning-memcpy-warning-in.patch
 	patches.kernel.org/6.12.58-217-media-imon-make-send_packet-more-robust.patch
+	patches.kernel.org/6.12.58-218-drm-panthor-Serialize-GPU-cache-flush-operati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
