--- a/series.conf
+++ b/series.conf
@@ -12056,6 +12056,7 @@
 	patches.kernel.org/6.12.58-497-btrfs-ensure-no-dirty-metadata-is-written-bac.patch
 	patches.kernel.org/6.12.58-498-media-uvcvideo-Use-heuristic-to-find-stream-e.patch
 	patches.kernel.org/6.12.58-499-media-videobuf2-forbid-remove_bufs-when-legac.patch
+	patches.kernel.org/6.12.58-500-drm-mediatek-Disable-AFBC-support-on-Mediatek.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
