--- a/series.conf
+++ b/series.conf
@@ -11954,6 +11954,7 @@
 	patches.kernel.org/6.12.58-395-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 	patches.kernel.org/6.12.58-396-wifi-mac80211-Track-NAN-interface-start-stop.patch
 	patches.kernel.org/6.12.58-397-net-intel-fm10k-Fix-parameter-idx-set-but-not.patch
+	patches.kernel.org/6.12.58-398-r8169-set-EEE-speed-down-ratio-to-1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
