--- a/series.conf
+++ b/series.conf
@@ -11564,6 +11564,7 @@
 	patches.kernel.org/6.12.58-005-ACPI-video-Fix-use-after-free-in-acpi_video_s.patch
 	patches.kernel.org/6.12.58-006-ACPI-button-Call-input_free_device-on-failing.patch
 	patches.kernel.org/6.12.58-007-virtio-net-drop-the-multi-buffer-XDP-packet-i.patch
+	patches.kernel.org/6.12.58-008-fbdev-bitblit-bound-check-glyph-index-in-bit_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
