--- a/series.conf
+++ b/series.conf
@@ -12006,6 +12006,7 @@
 	patches.kernel.org/6.12.58-447-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-.patch
 	patches.kernel.org/6.12.58-448-usb-xhci-pci-Fix-USB2-only-root-hub-registrat.patch
 	patches.kernel.org/6.12.58-449-char-misc-restrict-the-dynamic-range-to-exclu.patch
+	patches.kernel.org/6.12.58-450-drm-amd-display-Add-fallback-path-for-YCBCR42.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
