netfilter: nf_reject: don't reply to icmp error messages (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11894,6 +11894,7 @@
 	patches.kernel.org/6.12.58-335-selftests-traceroute-Use-require_command.patch
 	patches.kernel.org/6.12.58-336-selftests-traceroute-Return-correct-value-on-.patch
 	patches.kernel.org/6.12.58-337-openrisc-Add-R_OR1K_32_PCREL-relocation-type-.patch
+	patches.kernel.org/6.12.58-338-netfilter-nf_reject-don-t-reply-to-icmp-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
