--- a/series.conf
+++ b/series.conf
@@ -12020,6 +12020,7 @@
 	patches.kernel.org/6.12.58-461-fs-hpfs-Fix-error-code-for-new_inode-failure-.patch
 	patches.kernel.org/6.12.58-462-um-Fix-help-message-for-ssl-non-raw.patch
 	patches.kernel.org/6.12.58-463-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
+	patches.kernel.org/6.12.58-464-rtc-pcf2127-clear-minute-second-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
