--- a/series.conf
+++ b/series.conf
@@ -11560,6 +11560,7 @@
 	patches.kernel.org/6.12.58-001-NFSD-Fix-crash-in-nfsd4_read_release.patch
 	patches.kernel.org/6.12.58-002-net-usb-asix_devices-Check-return-value-of-us.patch
 	patches.kernel.org/6.12.58-003-fbcon-Set-fb_display-i-mode-to-NULL-when-the-.patch
+	patches.kernel.org/6.12.58-004-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
