cpufreq/longhaul: handle NULL policy in longhaul_exit (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11660,6 +11660,7 @@
 	patches.kernel.org/6.12.58-101-ACPI-video-force-native-for-Lenovo-82K8.patch
 	patches.kernel.org/6.12.58-102-libbpf-Fix-USDT-SIB-argument-handling-causing.patch
 	patches.kernel.org/6.12.58-103-selftests-bpf-Fix-bpf_prog_detach2-usage-in-t.patch
+	patches.kernel.org/6.12.58-104-cpufreq-longhaul-handle-NULL-policy-in-longha.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
