--- a/series.conf
+++ b/series.conf
@@ -11839,6 +11839,7 @@
 	patches.kernel.org/6.12.58-280-dmaengine-dw-edma-Set-status-for-callback_res.patch
 	patches.kernel.org/6.12.58-281-drm-msm-dsi-phy-Toggle-back-buffer-resync-aft.patch
 	patches.kernel.org/6.12.58-282-drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-r.patch
+	patches.kernel.org/6.12.58-283-drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-obje.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
