wifi: brcmfmac: fix crash while sending Action Frames in standalone AP Mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11566,6 +11566,7 @@
 	patches.kernel.org/6.12.58-007-virtio-net-drop-the-multi-buffer-XDP-packet-i.patch
 	patches.kernel.org/6.12.58-008-fbdev-bitblit-bound-check-glyph-index-in-bit_.patch
 	patches.kernel.org/6.12.58-009-Bluetooth-rfcomm-fix-modem-control-handling.patch
+	patches.kernel.org/6.12.58-010-wifi-brcmfmac-fix-crash-while-sending-Action-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
