char: misc: Make misc_register() reentry for miscdevice who wants dynamic minor (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11786,6 +11786,7 @@
 	patches.kernel.org/6.12.58-227-wifi-rtw89-wow-remove-notify-during-WoWLAN-ne.patch
 	patches.kernel.org/6.12.58-228-wifi-rtw89-fix-BSSID-comparison-for-non-trans.patch
 	patches.kernel.org/6.12.58-229-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
+	patches.kernel.org/6.12.58-230-char-misc-Make-misc_register-reentry-for-misc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
