tools bitmap: Add missing asm-generic/bitsperlong.h include (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12036,6 +12036,7 @@
 	patches.kernel.org/6.12.58-477-scsi-ufs-core-Include-UTP-error-in-INT_FATAL_.patch
 	patches.kernel.org/6.12.58-478-ACPI-property-Return-present-device-nodes-onl.patch
 	patches.kernel.org/6.12.58-479-LoongArch-Handle-new-atomic-instructions-for-.patch
+	patches.kernel.org/6.12.58-480-tools-bitmap-Add-missing-asm-generic-bitsperl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
