pwm: pca9685: Use bulk write to atomicially update registers (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11687,6 +11687,7 @@
 	patches.kernel.org/6.12.58-128-ARM-tegra-transformer-20-fix-audio-codec-inte.patch
 	patches.kernel.org/6.12.58-129-firmware-qcom-tzmem-disable-sc7180-platform.patch
 	patches.kernel.org/6.12.58-130-mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-fo.patch
+	patches.kernel.org/6.12.58-131-pwm-pca9685-Use-bulk-write-to-atomicially-upd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
