irqchip/sifive-plic: Respect mask state when setting affinity (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11654,6 +11654,7 @@
 	patches.kernel.org/6.12.58-095-cpufreq-ti-Add-support-for-AM62D2.patch
 	patches.kernel.org/6.12.58-096-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-log.patch
 	patches.kernel.org/6.12.58-097-firewire-ohci-move-self_id_complete-tracepoin.patch
+	patches.kernel.org/6.12.58-098-irqchip-sifive-plic-Respect-mask-state-when-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
