--- a/series.conf
+++ b/series.conf
@@ -11768,6 +11768,7 @@
 	patches.kernel.org/6.12.58-209-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 	patches.kernel.org/6.12.58-210-bridge-Redirect-to-backup-port-when-port-is-a.patch
 	patches.kernel.org/6.12.58-211-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer.patch
+	patches.kernel.org/6.12.58-212-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
