bpf: Do not limit bpf_cgroup_from_id to current's namespace (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11692,6 +11692,7 @@
 	patches.kernel.org/6.12.58-133-tee-allow-a-driver-to-allocate-a-tee_device-w.patch
 	patches.kernel.org/6.12.58-134-nvmet-fc-avoid-scheduling-association-deletio.patch
 	patches.kernel.org/6.12.58-135-nvme-fc-use-lock-accessing-port_state-and-rpo.patch
+	patches.kernel.org/6.12.58-136-bpf-Do-not-limit-bpf_cgroup_from_id-to-curren.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
