drm/amdgpu: Correct the counts of nr_banks and nr_errors (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11809,6 +11809,7 @@
 	patches.kernel.org/6.12.58-250-remoteproc-wkup_m3-Use-devm_pm_runtime_enable.patch
 	patches.kernel.org/6.12.58-251-net-phy-fixed_phy-let-fixed_phy_unregister-fr.patch
 	patches.kernel.org/6.12.58-252-fuse-zero-initialize-inode-private-data.patch
+	patches.kernel.org/6.12.58-253-drm-amdgpu-Correct-the-counts-of-nr_banks-and.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
