ACPI: resource: Skip IRQ override on ASUS Vivobook Pro N6506CU (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11665,6 +11665,7 @@
 	patches.kernel.org/6.12.58-106-selftests-bpf-Upon-failures-exit-with-code-1-.patch
 	patches.kernel.org/6.12.58-107-irqchip-gic-v2m-Handle-Multiple-MSI-base-IRQ-.patch
 	patches.kernel.org/6.12.58-108-ACPI-PRM-Skip-handlers-with-NULL-handler_addr.patch
+	patches.kernel.org/6.12.58-109-ACPI-resource-Skip-IRQ-override-on-ASUS-Vivob.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
