--- a/series.conf
+++ b/series.conf
@@ -11688,6 +11688,7 @@
 	patches.kernel.org/6.12.58-129-firmware-qcom-tzmem-disable-sc7180-platform.patch
 	patches.kernel.org/6.12.58-130-mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-fo.patch
 	patches.kernel.org/6.12.58-131-pwm-pca9685-Use-bulk-write-to-atomicially-upd.patch
+	patches.kernel.org/6.12.58-132-ACPICA-dispatcher-Use-acpi_ds_clear_operands-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
