--- a/series.conf
+++ b/series.conf
@@ -11823,6 +11823,7 @@
 	patches.kernel.org/6.12.58-264-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-t.patch
 	patches.kernel.org/6.12.58-265-drm-amdgpu-Respect-max-pixel-clock-for-HDMI-a.patch
 	patches.kernel.org/6.12.58-266-mips-lantiq-danube-add-missing-properties-to-.patch
+	patches.kernel.org/6.12.58-267-mips-lantiq-danube-add-model-to-EASY50712-dts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
