drm/xe/guc: Return an error code if the GuC load fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11923,6 +11923,7 @@
 	patches.kernel.org/6.12.58-364-page_pool-always-add-GFP_NOWARN-for-ATOMIC-al.patch
 	patches.kernel.org/6.12.58-365-ethernet-Extend-device_get_mac_address-to-use.patch
 	patches.kernel.org/6.12.58-366-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-s.patch
+	patches.kernel.org/6.12.58-367-drm-xe-guc-Return-an-error-code-if-the-GuC-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
