dm error: mark as DM_TARGET_PASSES_INTEGRITY (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11785,6 +11785,7 @@
 	patches.kernel.org/6.12.58-226-usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ether.patch
 	patches.kernel.org/6.12.58-227-wifi-rtw89-wow-remove-notify-during-WoWLAN-ne.patch
 	patches.kernel.org/6.12.58-228-wifi-rtw89-fix-BSSID-comparison-for-non-trans.patch
+	patches.kernel.org/6.12.58-229-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
