--- a/series.conf
+++ b/series.conf
@@ -12084,6 +12084,7 @@
 	patches.kernel.org/6.12.58-525-net-usb-qmi_wwan-initialize-MAC-header-offset.patch
 	patches.kernel.org/6.12.58-526-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_pt.patch
 	patches.kernel.org/6.12.58-527-bnxt_en-Add-mem_valid-bit-to-struct-bnxt_ctx_.patch
+	patches.kernel.org/6.12.58-528-bnxt_en-Refactor-bnxt_free_ctx_mem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
