tools: ynl: fix string attribute length to include null terminator (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11605,6 +11605,7 @@
 	patches.kernel.org/6.12.58-046-Bluetooth-ISO-Fix-another-instance-of-dst_typ.patch
 	patches.kernel.org/6.12.58-047-Bluetooth-hci_core-Fix-tracking-of-periodic-a.patch
 	patches.kernel.org/6.12.58-048-drm-etnaviv-fix-flush-sequence-logic.patch
+	patches.kernel.org/6.12.58-049-tools-ynl-fix-string-attribute-length-to-incl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
