mmc: sdhci-msm: Enable tuning for SDR50 mode for SD card (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11686,6 +11686,7 @@
 	patches.kernel.org/6.12.58-127-ARM-tegra-transformer-20-add-missing-magnetom.patch
 	patches.kernel.org/6.12.58-128-ARM-tegra-transformer-20-fix-audio-codec-inte.patch
 	patches.kernel.org/6.12.58-129-firmware-qcom-tzmem-disable-sc7180-platform.patch
+	patches.kernel.org/6.12.58-130-mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
