net: phy: clear link parameters on admin link down (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11947,6 +11947,7 @@
 	patches.kernel.org/6.12.58-388-jfs-fix-uninitialized-waitqueue-in-transactio.patch
 	patches.kernel.org/6.12.58-389-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-i.patch
 	patches.kernel.org/6.12.58-390-ASoC-qcom-sc8280xp-explicitly-set-S16LE-forma.patch
+	patches.kernel.org/6.12.58-391-net-phy-clear-link-parameters-on-admin-link-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
