hwmon: (k10temp) Add thermal support for AMD Family 1Ah-based models (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11670,6 +11670,7 @@
 	patches.kernel.org/6.12.58-111-thermal-gov_step_wise-Allow-cooling-level-to-.patch
 	patches.kernel.org/6.12.58-112-thermal-intel-selftests-workload_hint-Mask-un.patch
 	patches.kernel.org/6.12.58-113-power-supply-qcom_battmgr-add-OOI-chemistry.patch
+	patches.kernel.org/6.12.58-114-hwmon-k10temp-Add-thermal-support-for-AMD-Fam.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
