--- a/series.conf
+++ b/series.conf
@@ -11958,6 +11958,7 @@
 	patches.kernel.org/6.12.58-399-PCI-cadence-Check-for-the-existence-of-cdns_p.patch
 	patches.kernel.org/6.12.58-400-sparc-module-Add-R_SPARC_UA64-relocation-hand.patch
 	patches.kernel.org/6.12.58-401-sparc64-fix-prototypes-of-reads-bwl.patch
+	patches.kernel.org/6.12.58-402-vfio-return-ENOTTY-for-unsupported-device-fea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
