usbnet: Prevents free active kevent (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11596,6 +11596,7 @@
 	patches.kernel.org/6.12.58-037-ASoC-Intel-avs-Disable-periods-elapsed-work-w.patch
 	patches.kernel.org/6.12.58-038-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.kernel.org/6.12.58-039-libbpf-Fix-powerpc-s-stack-register-definitio.patch
+	patches.kernel.org/6.12.58-040-usbnet-Prevents-free-active-kevent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
