--- a/series.conf
+++ b/series.conf
@@ -11691,6 +11691,7 @@
 	patches.kernel.org/6.12.58-132-ACPICA-dispatcher-Use-acpi_ds_clear_operands-.patch
 	patches.kernel.org/6.12.58-133-tee-allow-a-driver-to-allocate-a-tee_device-w.patch
 	patches.kernel.org/6.12.58-134-nvmet-fc-avoid-scheduling-association-deletio.patch
+	patches.kernel.org/6.12.58-135-nvme-fc-use-lock-accessing-port_state-and-rpo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
