crypto: aspeed - fix double free caused by devm (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11591,6 +11591,7 @@
 	patches.kernel.org/6.12.58-032-bpf-Find-eligible-subprogs-for-private-stack-.patch
 	patches.kernel.org/6.12.58-033-bpf-x86-Avoid-repeated-usage-of-bpf_prog-aux-.patch
 	patches.kernel.org/6.12.58-034-bpf-Do-not-audit-capability-check-in-do_jit.patch
+	patches.kernel.org/6.12.58-035-crypto-aspeed-fix-double-free-caused-by-devm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
