ASoC: cs-amp-lib-test: Fix missing include of kunit/test-bug.h (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11582,6 +11582,7 @@
 	patches.kernel.org/6.12.58-023-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 	patches.kernel.org/6.12.58-024-drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.kernel.org/6.12.58-025-ALSA-usb-audio-fix-control-pipe-direction.patch
+	patches.kernel.org/6.12.58-026-ASoC-cs-amp-lib-test-Fix-missing-include-of-k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
