9p: sysfs_init: don't hardcode error to ENOMEM (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12032,6 +12032,7 @@
 	patches.kernel.org/6.12.58-473-NTB-epf-Allow-arbitrary-BAR-mapping.patch
 	patches.kernel.org/6.12.58-474-9p-fix-sys-fs-9p-caches-overwriting-itself.patch
 	patches.kernel.org/6.12.58-475-cpufreq-tegra186-Initialize-all-cores-to-max-.patch
+	patches.kernel.org/6.12.58-476-9p-sysfs_init-don-t-hardcode-error-to-ENOMEM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
