--- a/series.conf
+++ b/series.conf
@@ -11822,6 +11822,7 @@
 	patches.kernel.org/6.12.58-263-drm-amd-display-incorrect-conditions-for-fail.patch
 	patches.kernel.org/6.12.58-264-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-t.patch
 	patches.kernel.org/6.12.58-265-drm-amdgpu-Respect-max-pixel-clock-for-HDMI-a.patch
+	patches.kernel.org/6.12.58-266-mips-lantiq-danube-add-missing-properties-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
