scsi: lpfc: Clean up allocated queues when queue setup mbox commands fail (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11927,6 +11927,7 @@
 	patches.kernel.org/6.12.58-368-drm-amdgpu-reject-gang-submissions-under-SRIO.patch
 	patches.kernel.org/6.12.58-369-selftests-Makefile-include-INSTALL_DEP_TARGET.patch
 	patches.kernel.org/6.12.58-370-scsi-ufs-core-Disable-timestamp-functionality.patch
+	patches.kernel.org/6.12.58-371-scsi-lpfc-Clean-up-allocated-queues-when-queu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
