cpuidle: Fail cpuidle device registration if there is one already (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11699,6 +11699,7 @@
 	patches.kernel.org/6.12.58-140-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
 	patches.kernel.org/6.12.58-141-power-supply-qcom_battmgr-handle-charging-sta.patch
 	patches.kernel.org/6.12.58-142-bpftool-Fix-Wuninitialized-const-pointer-warn.patch
+	patches.kernel.org/6.12.58-143-cpuidle-Fail-cpuidle-device-registration-if-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
