drm/amd/pm: Use cached metrics data on arcturus (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11739,6 +11739,7 @@
 	patches.kernel.org/6.12.58-180-drm-amd-display-add-more-cyan-skillfish-devic.patch
 	patches.kernel.org/6.12.58-181-drm-amd-display-update-dpp-disp-clock-from-sm.patch
 	patches.kernel.org/6.12.58-182-drm-amd-pm-Use-cached-metrics-data-on-aldebar.patch
+	patches.kernel.org/6.12.58-183-drm-amd-pm-Use-cached-metrics-data-on-arcturu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
