--- a/series.conf
+++ b/series.conf
@@ -11847,6 +11847,7 @@
 	patches.kernel.org/6.12.58-288-drm-panel-backlight-quirks-Make-EDID-match-op.patch
 	patches.kernel.org/6.12.58-289-net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000.patch
 	patches.kernel.org/6.12.58-290-media-adv7180-Add-missing-lock-in-suspend-cal.patch
+	patches.kernel.org/6.12.58-291-media-adv7180-Do-not-write-format-to-device-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
