gpio: swnode: don't use the swnode's name as the key for GPIO lookup (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12070,6 +12070,7 @@
 	patches.kernel.org/6.12.58-511-selftests-net-use-destination-options-instead.patch
 	patches.kernel.org/6.12.58-512-selftests-netdevsim-Fix-ethtool-coalesce.sh-f.patch
 	patches.kernel.org/6.12.58-513-net-vlan-sync-VLAN-features-with-lower-device.patch
+	patches.kernel.org/6.12.58-514-gpio-swnode-don-t-use-the-swnode-s-name-as-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
