--- a/series.conf
+++ b/series.conf
@@ -12038,6 +12038,7 @@
 	patches.kernel.org/6.12.58-479-LoongArch-Handle-new-atomic-instructions-for-.patch
 	patches.kernel.org/6.12.58-480-tools-bitmap-Add-missing-asm-generic-bitsperl.patch
 	patches.kernel.org/6.12.58-481-tools-lib-thermal-don-t-preserve-owner-in-ins.patch
+	patches.kernel.org/6.12.58-482-tools-lib-thermal-use-pkg-config-to-locate-li.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
