ASoC: qdsp6: q6asm: do not sleep while atomic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11571,6 +11571,7 @@
 	patches.kernel.org/6.12.58-012-fbdev-valkyriefb-Fix-reference-count-leak-in-.patch
 	patches.kernel.org/6.12.58-013-mptcp-drop-bogus-optimization-in-__mptcp_chec.patch
 	patches.kernel.org/6.12.58-014-mptcp-restore-window-probe.patch
+	patches.kernel.org/6.12.58-015-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
