--- a/series.conf
+++ b/series.conf
@@ -12027,6 +12027,7 @@
 	patches.kernel.org/6.12.58-468-clk-at91-clk-sam9x60-pll-force-write-to-PLL_U.patch
 	patches.kernel.org/6.12.58-469-9p-trans_fd-p9_fd_request-kick-rx-thread-if-E.patch
 	patches.kernel.org/6.12.58-470-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enabl.patch
+	patches.kernel.org/6.12.58-471-clk-scmi-Add-duty-cycle-ops-only-when-duty-cy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
