ACPI: button: Call input_free_device() on failing input device registration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11562,6 +11562,7 @@
 	patches.kernel.org/6.12.58-003-fbcon-Set-fb_display-i-mode-to-NULL-when-the-.patch
 	patches.kernel.org/6.12.58-004-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.kernel.org/6.12.58-005-ACPI-video-Fix-use-after-free-in-acpi_video_s.patch
+	patches.kernel.org/6.12.58-006-ACPI-button-Call-input_free_device-on-failing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
