--- a/series.conf
+++ b/series.conf
@@ -11929,6 +11929,7 @@
 	patches.kernel.org/6.12.58-370-scsi-ufs-core-Disable-timestamp-functionality.patch
 	patches.kernel.org/6.12.58-371-scsi-lpfc-Clean-up-allocated-queues-when-queu.patch
 	patches.kernel.org/6.12.58-372-scsi-lpfc-Decrement-ndlp-kref-after-FDISC-ret.patch
+	patches.kernel.org/6.12.58-373-scsi-lpfc-Check-return-status-of-lpfc_reset_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
