--- a/series.conf
+++ b/series.conf
@@ -11811,6 +11811,7 @@
 	patches.kernel.org/6.12.58-252-fuse-zero-initialize-inode-private-data.patch
 	patches.kernel.org/6.12.58-253-drm-amdgpu-Correct-the-counts-of-nr_banks-and.patch
 	patches.kernel.org/6.12.58-254-drm-amdkfd-fix-vram-allocation-failure-for-a-.patch
+	patches.kernel.org/6.12.58-255-drm-amd-display-Support-HW-cursor-180-rot-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
