--- a/series.conf
+++ b/series.conf
@@ -11876,6 +11876,7 @@
 	patches.kernel.org/6.12.58-317-f2fs-fix-wrong-layout-information-on-16KB-pag.patch
 	patches.kernel.org/6.12.58-318-selftests-mptcp-join-allow-more-time-to-send-.patch
 	patches.kernel.org/6.12.58-319-scsi-ufs-host-mediatek-Enhance-recovery-on-re.patch
+	patches.kernel.org/6.12.58-320-scsi-ufs-host-mediatek-Fix-unbalanced-IRQ-ena.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
